--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -341,7 +341,7 @@ jobs:
         net/tinyportmapper net/tinyfecvpn net/nexttrace net/pcap-dnsproxy net/rustdesk-server net/tuic-server \
         net/dns-forwarder net/ipset-lists net/ShadowVPN net/nps net/vlmcsd net/dnsforwarder net/tcpping \
         net/mentohust net/ps3netsrv net/brook net/q net/speedtest-cli net/tcping-simple \
-        net/vsftpd net/smartdns net/miniupnpd net/p910nd net/ddns-scripts net/shadow-tls \
+        net/vsftpd net/smartdns net/miniupnpd net/p910nd net/ddns-scripts \
         net/ariang libs/wxbase libs/rapidjson libs/libcron libs/quickjspp libs/toml11 \
         libs/libdouble-conversion libs/qt6base libs/cxxopts libs/jpcre2 libs/alac libs/libcryptopp libs/antileech \
         utils/qt6tools utils/dockerd utils/cpulimit utils/sendat utils/filebrowser utils/cups-bjnp \
