--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -95,7 +95,7 @@ jobs:
         git_clone https://github.com/kiddin9/luci-app-adguardhome
         git_clone https://github.com/kiddin9/luci-app-cloudreve
         git_clone https://github.com/kiddin9/openwrt-clouddrive2 && mvdir openwrt-clouddrive2
-        git_clone https://github.com/kiddin9/nginx-ui-openwrt && mvdir nginx-ui-openwrt
+        # git_clone https://github.com/kiddin9/nginx-ui-openwrt && mvdir nginx-ui-openwrt
         git_clone https://github.com/kiddin9/luci-app-uugamebooster
         ) &
         (
