--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -300,7 +300,7 @@ jobs:
         git_clone https://github.com/hczjxhdyz/luci-app-cns-server
         git_clone https://github.com/tano-systems/luci-app-tn-lldpd
         git_clone https://github.com/DRAWCORE/luci-app-qos-emong
-        git_clone https://github.com/wintbiit/luci-app-sakurafrp
+        # git_clone https://github.com/wintbiit/luci-app-sakurafrp
         git_clone https://github.com/ykxVK8yL5L/luci-app-taskschedule taskschedule && mvdir taskschedule
         git_clone https://github.com/douo/luci-app-tinyfecvpn
         ) &
@@ -364,7 +364,7 @@ jobs:
         net/ipset-lists net/ShadowVPN net/nps net/vlmcsd net/dnsforwarder \
         net/ps3netsrv net/brook net/q net/speedtest-cli \
         net/vsftpd net/smartdns net/miniupnpd net/p910nd \
-        net/ariang libs/wxbase libs/rapidjson libs/libcron libs/quickjspp libs/toml11 \
+        net/ariang libs/wxbase libs/rapidjson libs/libcron libs/quickjspp libs/toml11 libs/libdvbcsa \
         libs/libdouble-conversion libs/qt6base libs/jpcre2 libs/alac libs/libcryptopp libs/antileech \
         utils/qt6tools utils/dockerd utils/cpulimit utils/sendat utils/filebrowser utils/cups-bjnp utils/rhash utils/boltbrowser \
         utils/phicomm-k3screenctrl utils/joker utils/7z utils/dhrystone utils/supervisor utils/tinymembench utils/pcat-mgr utils/fan2go \
@@ -420,7 +420,7 @@ jobs:
         sed -i \
         -e "s/\(network\..*\)\.ifname/\1.device/g" \
         `find \( -path "*/root/*" -o -path "*/files/*" -o -path "*/luasrc/*" \) ! -path "./base-files/*" ! -path "./dnsmasq/*" ! -path "./luci-base/*" ! -path "./ppp/*" -type f` &
-        sed -i -e "s/\(killall .*\)-[0-9] /\1-3 /g" \
+        # sed -i -e "s/\(killall .*\)-[0-9] /\1-3 /g" \
         -e "s/killall \([^-]+*\)/killall -3 \1/g" \
         `find \( -path "*/files/root/etc/init.d/*" -o -path "*/root/etc/init.d/*" -o -path "*/files/*.init" \) -type f` &
         (
