--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -331,7 +331,6 @@ jobs:
         git_clone https://github.com/calfeche13/luci-app-public-ip-monitor
         git_clone https://github.com/vison-v/luci-app-nginx-proxy
         git_clone https://github.com/tty228/luci-app-wechatpush
-        git_clone https://github.com/superzjg/luci-app-frpc_frps && mv luci-app-frpc_frps/luci-app-{frpc,frps} ./;rm -rf luci-app-frpc_frps
         ) &
         (
         git_sparse_clone master "https://github.com/coolsnowwolf/packages" multimedia/UnblockNeteaseMusic-Go \
@@ -377,7 +376,7 @@ jobs:
         lang/lua-periphery lang/lua-neturl lang/lua-maxminddb lang/node-pnpm devel/gn
         git_clone https://github.com/koshev-msk/modemfeed && mv -n modemfeed/*/!(telephony)/* ./; rm -rf modemfeed
         git_sparse_clone openwrt-24.10 "https://github.com/coolsnowwolf/luci" applications themes/luci-theme-design libs/luci-lib-fs
-        mv -f applications luciapp;rm -rf luciapp/luci-app-turboacc
+        mv -f applications luciapp;rm -rf luciapp/{luci-app-turboacc,luci-app-frp*}
         git_sparse_clone master "https://github.com/coolsnowwolf/luci" applications
         mv -n applications/* luciapp/; rm -rf applications
         rm -rf luciapp/{luci-app-qbittorrent,luci-app-zerotier,luci-app-cpufreq,luci-app-e2guardian,luci-app-aliyundrive-fuse,luci-app-syncdial,luci-app-firewall}
