--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -231,7 +231,7 @@ jobs:
         (
         git_clone https://github.com/QiuSimons/luci-app-daed-next daed1 && mvdir daed1
         git_clone https://github.com/JiaY-shi/fancontrol fanc && mv fanc/{fancontrol,luci-app-fancontrol} ./;rm -rf fanc
-        git_sparse_clone master "https://github.com/coolsnowwolf/lede" package/wwan package/lean package/network/services/shellsync package/qca/shortcut-fe package/network/services/fullconenat package/network/services/fullconenat-nft && cp -rf wwan/*/* ./ ; rm -Rf wwan
+        git_sparse_clone master "https://github.com/coolsnowwolf/lede" package/wwan package/lean package/network/services/shellsync package/qca/shortcut-fe package/network/services/fullconenat-nft && cp -rf wwan/*/* ./ ; rm -Rf wwan
         git_clone https://github.com/Siriling/5G-Modem-Support && rm -rf 5G-Modem-Support/rooter && mvdir 5G-Modem-Support
         ) &
         (
@@ -346,7 +346,7 @@ jobs:
         git_sparse_clone master "https://github.com/xiaoqingfengATGH/feeds-xiaoqingfeng" homeredirect luci-app-homeredirect
         git_sparse_clone master "https://github.com/immortalwrt/immortalwrt" \
         package/kernel/rtl8189es package/emortal/autocore package/emortal/automount \
-        package/emortal/cpufreq \
+        package/emortal/cpufreq package/network/utils/fullconenat \
         package/utils/mhz package/utils/pcat-manager
         ) &
         (
