--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -324,7 +324,7 @@ jobs:
         #git_clone https://github.com/bobbyunknown/luci-app-insomclash
         git_clone https://github.com/muink/luci-app-ssrust
         git_clone https://github.com/hudra0/qosmate
-        git_clone https://github.com/sirpdboy/luci-app-netdata netdata1 && mvdir netdata1
+        git_clone https://github.com/muink/luci-app-netdata
         git_clone https://github.com/xptsp/luci-app-ympd
         git_clone https://github.com/xptsp/openwrt-ympd
         git_clone https://github.com/xptsp/openwrt-peanut
