--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -233,6 +233,7 @@ jobs:
         git_clone https://github.com/JiaY-shi/fancontrol fanc && mv fanc/{fancontrol,luci-app-fancontrol} ./;rm -rf fanc
         git_sparse_clone master "https://github.com/coolsnowwolf/lede" package/wwan package/lean package/network/services/shellsync package/qca/shortcut-fe package/network/services/fullconenat-nft && cp -rf wwan/*/* ./ ; rm -Rf wwan
         git_clone https://github.com/Siriling/5G-Modem-Support && rm -rf 5G-Modem-Support/rooter && mvdir 5G-Modem-Support
+        git_clone https://github.com/linkease/istore-packages
         ) &
         (
         git_clone https://github.com/muink/luci-app-dnsproxy
@@ -398,6 +399,7 @@ jobs:
         mv -n lean/!(r8101|r8125|r8126|r8168) ./ ; rm -Rf lean
         mv -n liep/!(luci-app-filebrowser) ./ ; rm -Rf liep
         mv -n openwrt-app-actions/applications/* ./;rm -rf openwrt-app-actions
+        mvdir istore-packages
         rm -Rf */.git
         for pkg in $(ls -d .github/diy/packages/*); do
           mv -f $pkg/Makefile.k $pkg/Makefile >/dev/null 2>&1 || true
