--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -399,7 +399,7 @@ jobs:
         mv -n lean/!(r8101|r8125|r8126|r8168) ./ ; rm -Rf lean
         mv -n liep/!(luci-app-filebrowser) ./ ; rm -Rf liep
         mv -n openwrt-app-actions/applications/* ./;rm -rf openwrt-app-actions
-        mvdir istore-packages
+        mv -n istore-packages/* ./;rm -rf istore-packages
         rm -Rf */.git
         for pkg in $(ls -d .github/diy/packages/*); do
           mv -f $pkg/Makefile.k $pkg/Makefile >/dev/null 2>&1 || true
