--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -134,7 +134,7 @@ jobs:
         git_clone https://github.com/sirpdboy/luci-app-watchdog watchdog1 && mvdir watchdog1
         git_clone https://github.com/sirpdboy/luci-app-cupsd cupsd1 && mv -n cupsd1/{luci-app-cupsd,cups} ./ ; rm -rf cupsd1
         git_clone https://github.com/sirpdboy/luci-app-timecontrol timecontrol && mvdir timecontrol
-        git_clone https://github.com/sirpdboy/luci-theme-kucat kucat && mvdir kucat
+        git_clone https://github.com/sirpdboy/luci-theme-kucat
         git_clone https://github.com/sirpdboy/luci-app-chatgpt-web
         git_clone https://github.com/sirpdboy/luci-app-eqosplus
         # git_clone https://github.com/muink/luci-app-homeproxy
