--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -330,7 +330,7 @@ jobs:
         git_clone https://github.com/xptsp/openwrt-ympd
         git_clone https://github.com/xptsp/openwrt-peanut
         git_clone https://github.com/calfeche13/luci-app-public-ip-monitor
-        git_clone https://github.com/vison-v/luci-app-nginx-proxy
+        # git_clone https://github.com/vison-v/luci-app-nginx-proxy
         git_clone https://github.com/tty228/luci-app-wechatpush
         git_clone https://github.com/natpierce/luci-app-natpierce natpierce && mv natpierce/luci-app-natpierce ./;rm -rf natpierce
         ) &
