--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -333,7 +333,8 @@ jobs:
         git_clone https://github.com/calfeche13/luci-app-public-ip-monitor
         # git_clone https://github.com/vison-v/luci-app-nginx-proxy
         git_clone https://github.com/tty228/luci-app-wechatpush
-        git_clone https://github.com/natpierce/luci-app-natpierce natpierce && mv natpierce/luci-app-natpierce ./;rm -rf natpierce
+        git_clone https://github.com/sbwml/luci-app-mentohust mentohust1 && mvdir mentohust1
+        # git_clone https://github.com/natpierce/luci-app-natpierce natpierce && mv natpierce/luci-app-natpierce ./;rm -rf natpierce
         ) &
         (
         git_sparse_clone master "https://github.com/coolsnowwolf/packages" multimedia/UnblockNeteaseMusic-Go \
