--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -280,6 +280,7 @@ jobs:
         git_clone https://github.com/kenzok78/luci-app-guest-wifi
         git_clone https://github.com/EkkoG/openwrt-natmap
         git_clone https://github.com/EkkoG/luci-app-natmap
+        git_clone https://github.com/yichya/openwrt-hv-tools
         ) &
         (
         git_clone https://github.com/EasyTier/luci-app-easytier luci-app-easytier1 && mvdir luci-app-easytier1
